# rsloader

./: Cargo.toml  README.md  asd  build.sh  flkl  haha  laa  lkl  lmao
bins/: rscrypter  rsloader
resources/: rscrypter_cli.yml  rsloader_cli.yml
src/: lib.rs  main.rs
src/examples/crypters/: mirincrypter.rs  rscrypter.rs
src/examples/loaders/: mirinloader.rs  mirinloader_CreateRemoteThread.rs  mirinloader_EnumSystemGeoID.rs  mirinloader_NtCreateThreadEx.rs  mirinloader_direct_syscalls.rs  rsloader_CreateRemoteThread.rs  rsloader_EnumSystemGeoID.rs  rsloader_NtCreateThreadEx.rs  rsloader_direct_syscalls.rs
src/examples/resources/: mirincrypter_cli.yml  rscrypter_cli.yml
