[package]
name = "rsloader"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"

[[bin]]
name = "rsloader"
path = "src/bin/rsloader.rs"

[[bin]]
name = "rscrypter"
path = "src/bin/rscrypter.rs"

[dependencies]
rand = "0.8.5"
aes-gcm = "0.10.1"  

mmap-fixed = "0.1"

bincode = "1.3.3"
serde_derive = "1.0.144"
serde = "1.0.144"

anyhow = "1.0"
clap = {version = "2.33", features = ["yaml"]}